kuberenets/Ingress/Home-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home-service
  template:
    metadata:
      labels:
        app: home-service 
    spec:
      containers:
      - name: home-service
        image: mayurwagh/home:latest
        ports:
        - containerPort: 80 
---

apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home-service
  ports:
  - protocol: TCP
    port: 80
